# ramdl

./: Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: check.yml
device/: README.md  private_key.pem
src/: decrypter.rs  error.rs  lib.rs  stream_info.rs
src/api/: albums.rs  artwork.rs  editorial_notes.rs  genres.rs  library_albums.rs  library_artists.rs  library_music_video.rs  library_songs.rs  lyrics.rs  mod.rs  music_videos.rs  play_parameters.rs  playlists.rs  previews.rs  search.rs  songs.rs  webplayback.rs
src/apple_music/: apple_music.rs  mod.rs  song.rs
