[package]
name = "ramdl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust library for downloading Apple Music songs/music videos/posts"
repository = "https://github.com/liulifox233/ramdl"
readme = "README.md"

[dependencies]
fancy-regex = "0.14.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
